<resources>
    <string name="app_name">IkeaBusinessCard_NDPr1</string>
    <string name="click">Click</string>
    <string name="content1">IKEA India - sharing design inspiration and   smart solutions to make life at home easier.</string>
    <string name="address">Diamond Hills, Lumbini Avenue, Gachibowli, Hyderabad, Telangana 500081</string>
    <string name="email">ikeaindia@ikea.com</string>
    <string name="website">http://IKEA.in</string>
    <string name="phone1">1800-419-4532</string>
    <string name="phone2">092463-79855</string>
    <string name="content2">Get ready for the first IKEA store   in India!  Opening this July in Hyderabad</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>

</resources>
