<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res/android"
    android:background="@drawable/gradient"
    tools:context="com.example.apoorva.ikeabusinesscard_ndpr1.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/boogaloo"
        android:text="@string/click"
        android:textColor="#000000"
        android:textSize="23sp" />


   <ImageView
       android:layout_width="40dp"
       android:layout_height="40dp"
       android:src="@drawable/arrow"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="40dp"
       android:contentDescription="@string/todo2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="192dp"
        android:fontFamily="@font/chelsea_market"
        android:text="@string/content2"
        android:textAlignment="center"
        android:textColor="#ba000d"
        android:textSize="20sp" />


    <ImageButton
        android:id="@+id/ikealogo"
        android:src="@drawable/ikealogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        app:srcCompat="@drawable/ikealogo"
        android:contentDescription="@string/todo1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        android:fontFamily="@font/neuton"
        android:text="@string/content1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp" />




    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="250dp"
        android:orientation="vertical"
        android:paddingStart="31dp">


        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/place"
            android:contentDescription="@string/address">
        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="240dp"
        android:orientation="vertical"
        android:paddingStart="58dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:autoLink="map"
            android:onClick="open"
            android:textColor="#000000"/>
    </LinearLayout>




    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="185dp"
        android:orientation="vertical"
        android:paddingStart="34dp">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:src="@drawable/mail"
            android:contentDescription="@string/email">
        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="195dp"
        android:orientation="vertical"
        android:paddingStart="58dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:autoLink="all"
            android:textColor="#000000"/>
    </LinearLayout>




    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="120dp"
        android:orientation="vertical"
        android:paddingStart="34dp">


            <ImageView
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:src="@drawable/web"
                android:contentDescription="@string/website">
            </ImageView>

        </LinearLayout>

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="130dp"
        android:orientation="vertical"
        android:paddingStart="58dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:autoLink="all"
            android:textColor="#000000"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:paddingStart="34dp">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:src="@drawable/phone"
            android:contentDescription="@string/phone1">
        </ImageView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:paddingStart="58dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone1"
            android:autoLink="all"
            android:textColor="#000000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone2"
            android:autoLink="all"
            android:textColor="#000000"/>
    </LinearLayout>




    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/social_floating_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/floating_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/facebookicon" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/floating_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/twittericon" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/floating_instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/instaicon" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/floating_youtube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/youtubeicon" />

    </com.github.clans.fab.FloatingActionMenu>
</RelativeLayout>

